<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaryActivity"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <TextView
        android:id="@+id/confirm_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/prompt_confirmation_text_view"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_input_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/confirm_text_view"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_input_text"
        app:layout_constraintTop_toBottomOf="@id/name_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/number_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_input_text"
        app:layout_constraintTop_toBottomOf="@id/email_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>